fixed svg bug on mobile

--- a/src/css/section.css
+++ b/src/css/section.css
@@ -15,7 +15,7 @@
 	display: flex;
 	width: 100%;
 	height: 30rem;
-	align-items: center;
+	/* align-items: center; */
 	justify-content: center;
 
 	margin-top: 2rem;
@@ -23,6 +23,10 @@
 	border-radius: 0.5rem;
 
 	background-color: var(--darker);
+
+	flex-grow: 1;
+	flex-shrink: 1;
+	flex-basis: 0;
 }
 
 .section-item-header {
@@ -46,9 +50,10 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	flex-direction: column;
+	/* flex-direction: column; */
 	width: 100%;
-	height: inherit;
+	height: 100%;
+	/* height: inherit; */
 	margin-left: 2rem;
 	margin-right: 1rem;
 }
@@ -58,8 +63,9 @@
 	align-items: center;
 	justify-content: center;
 	width: 100%;
+	height: 100%;
 	min-width: 0;
-	height: inherit;
+	/* height: inherit; */
 	margin-left: 1rem;
 	margin-right: 2rem;
 }
@@ -67,6 +73,9 @@
 .section-item-image {
 	transform: scale(0.5);
 	overflow: visible;
-	/* height: inherit;
-	width: inherit; */
+
+	/* display: block; */
+	position: absolute;
+	/* height: inherit; */
+	/* width: inherit; */
 }
